--- a/app/components/todo/todo.html
+++ b/app/components/todo/todo.html
@@ -1,6 +1,6 @@
 <md-card>
   <md-card-content>
-    <div *ngFor="#todo of todos">
+    <div *ngFor="let todo of todos">
       <md-checkbox [(checked)]="todo.completed">
         {{todo.text}}
       </md-checkbox>
