--- a/src/app/todo/todo.html
+++ b/src/app/todo/todo.html
@@ -25,9 +25,9 @@
 </md-card>
 
 <!--<div *ngIf="!myForm.valid && myForm.dirty">Form is invalid</div>
-<div *ngIf="!newTodo.valid && newTodo.dirty">newTodo is invalid</div>-->
+<div *ngIf="!newTodo.valid && newTodo.dirty">newTodo is invalid</div>
 
-<!--<md-progress-circle mode="determinate" value="79"></md-progress-circle>
+<md-progress-circle mode="determinate" value="79"></md-progress-circle>
 <md-progress-circle mode="indeterminate"></md-progress-circle>
 <md-spinner></md-spinner>
 
