Re-added about page with links to source etc.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
     </button> ng2play&nbsp;
 
     <button md-button [routerLink]="['/']">Home</button>
+    <button md-button [routerLink]="['/about', 'Hello, world!']">About</button>
 
     <span class="app-toolbar-filler"></span>
 
